# billboard-project

./: .dockerignore  .gitignore  Billboard-page.html  CHARTS.md  Dockerfile  __init__.py  asyncio-billboard.ipynb  billboard_etl_pipeline.py  chart-analysis.ipynb  charts1995-2000.parquet  config.yaml  get_oldest.ipynb  handler_class.py  hot100.parquet  hot100_extract.py  hot100_transform.ipynb  import duckdb.py  lxml-targetClass-cheat-sheet.md  main.py  parsing-tests.ipynb  polars_methods.txt  pyproject.toml  regex-cheat-sheet.md  run.py  snippets_file.txt  template.env  xpath-cheat-sheet.md
billboard/: run.py
billboard/database/: write.py
billboard/etl/: extract.py  html_parser.py
billboard/utils/: cli_parser.py  counter_class.py
client_pkg/: __init__.py
configs/: compose.yaml  config_etl.yaml
data/processed_data/: chart-analytics.db.wal  load.sql  loadh.sql  tests.sql  transform.sql
data/raw_data/: raw-data_06-20.parquet  raw-data_06-22.parquet  raw-data_06-25.parquet  raw-data_07-04.parquet
docker/: docker-compose.yml  ex2.yml  template.env
etl/: __init__.py  exploratory_nb.ipynb  extract.py  load.py  scraper_config.py  test_edge_cases.ipynb  transform.py
hot100/: __init__.py  chart-analysis.ipynb  handler_class.py  hot100_extract.py  hot100_testtransform.ipynb  hot100_transform.py  joining_dict_.py  main.py  parser_class.py  playground-1.mongodb.js
logs/: norm_html.html  paywall_html.html
parser_pkg/: __init__.py
scripts/: entrypoint.py  run_etl.py
src/: __init__.py
src/app/: __init__.py  app.py  db_connector.py
src/billboard_fetch/: main.py
src/etl/: __init__.py  extract.py  load.py  transform.py
src/hot100_pkg/: __init__.py
src/utils/: __init__.py  database_config.py  (+1 more)
utils/: __init__.py  client_class.py  database_config.py  round_weekday_decorator.py
(+39 files in other folders)
