[project]
name = "hot100-pkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp[speedups]>=3.13.3",
    "asyncio>=3.4.3",
    "datetime>=5.5",
    "duckdb>=1.3.1",
    "httpx>=0.28.1",
    "httpx-retries>=0.4.0",
    "pathlib>=1.0.1",
    "platformdirs>=4.5.1",
    "pyyaml>=6.0.2",
    "selectolax>=0.4.6",
    "sqlalchemy>=2.0.46",
    "tool>=0.8.0",
    "typing>=3.10.0.0",
]

[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = []
