[project]
name = "billboard-fetch"
version = "1.0.0"
description = "cli tool to fetch billboard charts and write to a database"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "aiohttp[speedups]>=3.13.3",
    "asyncio>=3.4.3",
    "pathlib>=1.0.1",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.1",
    "selectolax>=0.4.6",
    "sqlalchemy[asyncio]>=2.0.46",
    "typing>=3.10.0.0",
]

[project.scripts]
fetch = "billboard_fetch:run"

[tool.uv]
package = true
